--- a/src/App/View/pages/home.html.twig
+++ b/src/App/View/pages/home.html.twig
@@ -4,7 +4,7 @@
 
 {% block content %}
     <main class="content">
-        <h2>Bienvenida</h2>
+        <h2>Bienvenida {{ user.username }}</h2>
     </main>
 
 {% endblock %}
