Add Exception system, View as service container, login page

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -7,6 +7,8 @@
 @use "pages/contact/contact";
 @use "pages/services/services";
 @use "pages/qui-sommes-nous/qui-sommes-nous";
+@use "pages/login/login";
+@use "pages/error/error";
 @use "responsive";
 
 
