--- a/src/App/View/layout/header.html.twig
+++ b/src/App/View/layout/header.html.twig
@@ -9,9 +9,9 @@
             <li><a href="./products">Nos Vélos</a></li>
             <li><a href="./contact">Contact</a></li>
         </ul>
-        <div class="menubar-user-icon">
+        <a href="./login" class="menubar-user-icon">
             <img src="data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHZpZXdCb3g9IjAgMCAyNCAyNCI+CiAgPHBhdGggZmlsbD0iIzU1NSIgZD0iTTEyLDRBNCw0IDAgMCwxIDE2LDhBNCw0IDAgMCwxIDEyLDEyQTQsNCAwIDAsMSA4LDhBNCw0IDAgMCwxIDEyLDRNMTIsMTRDMTYuNDIsMTQgMjAsMTUuNzkgMjAsMThWMjBINFYxOEM0LDE1Ljc5IDcuNTgsMTQgMTIsMTRaIiAvPgo8L3N2Zz4=" alt="User Icon">
-        </div>
+        </a>
         <div class="menubar-burger-icon">
             <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <rect y="4" width="24" height="2" fill="black"/>
