Ajout de l'Authentification, ignorance des reportoires var/ assets/css

--- a/src/scss/pages/login/login.scss
+++ b/src/scss/pages/login/login.scss
@@ -32,7 +32,11 @@
     h2 {
       text-align: center;
       margin-bottom: 1.5rem;
-      color: theme.$color-primary;
+      color: black;
+    }
+
+    .error-text {
+      color: #b71c1c;
     }
 
     .form-group {
