--- a/src/App/View/pages/login.html.twig
+++ b/src/App/View/pages/login.html.twig
@@ -6,10 +6,15 @@
     <main class="login-page">
         <h1>Vous connecter à votre espace membre</h1>
         <div class="login-container">
-            <form class="login-form" action="login.php" method="POST">
+            <form class="login-form" action="/login" method="POST">
                 <h2>Connexion</h2>
+                {% if error %}
+                <div class="form-group error-text">
+                    {{ error }}
+                </div>
+                {% endif %}
                 <div class="form-group">
-                    <label for="username">Utilisateur</label>
+                    <label for="username">Identifiant</label>
                     <input type="text" id="username" name="username" required />
                 </div>
                 <div class="form-group">
