Ajout de la base du Dashboard

--- a/src/App/View/pages/layout/components/header.html.twig
+++ b/src/App/View/pages/layout/components/header.html.twig
@@ -1,6 +1,6 @@
 <header>
     <nav class="menubar">
-        <a href="./" class="menubar-logo">
+        <a href=".." class="menubar-logo">
             <img src="./assets/images/LogoMobileBike.png" alt="Mobile Bike Logo">
         </a>
         <ul class="menubar-links">
