--- a/src/App/View/pages/layout/static-base.html.twig
+++ b/src/App/View/pages/layout/static-base.html.twig
@@ -11,11 +11,11 @@
     </head>
     <body>
 
-        {% include 'layout/header.html.twig' %}
+        {% include 'pages/layout/components/header.html.twig' %}
 
         {% block content %}{% endblock %}
 
-        {% include 'layout/footer.html.twig' %}
+        {% include 'pages/layout/components/footer.html.twig' %}
 
     </body>
 </html>
