--- a/src/App/View/pages/about.html.twig
+++ b/src/App/View/pages/about.html.twig
@@ -1,4 +1,4 @@
-{% extends 'layout/base.html.twig' %}
+{% extends 'pages/layout/static-base.html.twig' %}
 
 {% block title %}Qui sommes-nous ?{% endblock %}
 
