--- a/src/App/View/pages/home.html.twig
+++ b/src/App/View/pages/home.html.twig
@@ -1,10 +1,9 @@
-{% extends 'layout/base.html.twig' %}
+{% extends 'pages/layout/static-base.html.twig' %}
 
 {% block title %}Home{% endblock %}
 
 {% block content %}
     <main class="content">
-        <h2>Bienvenida {{ user.username }}</h2>
-    </main>
 
+    </main>
 {% endblock %}
