--- a/src/scss/_theme.scss
+++ b/src/scss/_theme.scss
@@ -25,3 +25,9 @@ $font-size-extra-large: 28px;
 $line-height-base: 1.5;
 $font-weight-normal: 400;
 $font-weight-bold: 700;
+
+
+// Dashboard
+$sidebar-width: 250px;
+$collapsed-width: 70px;
+$transition-speed: 0.3s;
