--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,6 +1,8 @@
 @use "theme";
 @use "components/layout/menubar";
+@use "components/layout/sidebar";
 @use "components/layout/footer";
+@use "components/layout/dashboard-footer";
 @use "components/banner";
 @use "pages/nos-velos/catalogue";
 @use "pages/nos-velos/card";
