Ajout de pages Dashboard

--- a/src/App/View/dashboard/dashboard.html.twig
+++ b/src/App/View/dashboard/dashboard.html.twig
@@ -3,5 +3,5 @@
 {% block title %}Dashboard{% endblock %}
 
 {% block content %}
-   test
+   <h1>Bienvenue, {{ user.username }} !</h1>
 {% endblock %}
