--- a/src/App/View/dashboard/layout/dashboard-base.html.twig
+++ b/src/App/View/dashboard/layout/dashboard-base.html.twig
@@ -12,7 +12,7 @@
 <body>
 
 {% include 'dashboard/layout/components/sidebar.html.twig' %}
-<div class="main-content">
+<div class="dashboard-content">
     {% block content %}{% endblock %}
 </div>
 {% include 'dashboard/layout/components/footer.html.twig' %}
