--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -4,6 +4,7 @@
 @use "components/layout/footer";
 @use "components/layout/dashboard-footer";
 @use "components/banner";
+@use "dashboard/dashboard";
 @use "pages/nos-velos/catalogue";
 @use "pages/nos-velos/card";
 @use "pages/contact/contact";
