--- a/src/scss/components/layout/_sidebar.scss
+++ b/src/scss/components/layout/_sidebar.scss
@@ -1,4 +1,5 @@
 @use '../../theme';
+@use 'sass:color';
 
 .sidebar {
   $self: &;
@@ -13,7 +14,7 @@
   color: white;
   transition: width var(--transition-speed);
   z-index: 1000;
-  box-shadow: 2px 0 5px rgba(0, 0, 0, 0.1);
+  border-right: 1px solid theme.$color-border;
 
   &-header {
     padding: 1.5rem;
@@ -53,17 +54,18 @@
 
   &-item {
     position: relative;
+    box-shadow: 2px 0 5px rgba(0, 0, 0, 0.2);
 
     &-link {
       display: flex;
       align-items: center;
       padding: 1rem 1.5rem;
-      color: inherit;
+      color: black;
       text-decoration: none;
       transition: background-color var(--transition-speed);
 
       &:hover {
-        background-color: var(--sidebar-hover, #34495e);
+        background-color: color.adjust(theme.$color-surface, $lightness: -10%);
       }
 
       &.active {
@@ -80,6 +82,20 @@
 
     &-text {
       white-space: nowrap;
+    }
+  }
+
+  &-item-client {
+    background-color: color.adjust(theme.$color-secondary, $lightness: +40%);
+    :hover {
+      background-color: color.adjust(theme.$color-secondary, $lightness: +30%);
+    }
+  }
+
+  &-item-admin {
+    background-color: color.adjust(theme.$color-accent, $lightness: +40%);
+    :hover {
+      background-color: color.adjust(theme.$color-accent, $lightness: +30%);
     }
   }
 
@@ -114,15 +130,5 @@
       margin-right: 0;
       font-size: 1.5rem;
     }
-  }
-}
-
-// Décalage du contenu principal
-.main-content {
-  margin-left: var(--sidebar-width);
-  transition: margin-left var(--transition-speed);
-
-  body.sidebar-collapsed & {
-    margin-left: var(--collapsed-width);
   }
 }
