--- a/src/scss/components/layout/_sidebar.scss
+++ b/src/scss/components/layout/_sidebar.scss
@@ -18,7 +18,7 @@
 
   &-header {
     padding: 1.5rem;
-    background: theme.$color-surface;
+    background: theme.$color-background;
     color: black;
     display: flex;
     align-items: center;
