--- a/src/App/View/dashboard/layout/components/sidebar.html.twig
+++ b/src/App/View/dashboard/layout/components/sidebar.html.twig
@@ -1,75 +1,89 @@
-<div class="sidebar sidebar-dark sidebar-collapsed" id="sidebar">
-    <div class="sidebar-header">
-        <a href=".." class="sidebar-logo">
-            <img src="/assets/images/LogoMobileBike.png" alt="Mobile Bike Logo">
-        </a>
-        <button class="sidebar-toggle " id="sidebarToggle">
-            <i class="fas fa-bars"></i>
-        </button>
+<header>
+    <div class="sidebar sidebar-dark sidebar-collapsed" id="sidebar">
+        <div class="sidebar-header">
+            <a href=".." class="sidebar-logo">
+                <img src="/assets/images/LogoMobileBike.png" alt="Mobile Bike Logo">
+            </a>
+            <button class="sidebar-toggle " id="sidebarToggle">
+                <i class="fas fa-bars"></i>
+            </button>
+        </div>
+
+        <ul class="sidebar-menu">
+            <li class="sidebar-item">
+                <a href="#" class="sidebar-item-link active">
+                    <span class="sidebar-item-icon"><i class="fas fa-home"></i></span>
+                    <span class="sidebar-item-text">Accueil</span>
+                </a>
+            </li>
+
+            {# Pour les client #}
+            {% if isClient %}
+                <li class="sidebar-item sidebar-item-client">
+                    <a href="#" class="sidebar-item-link">
+                        <span class="sidebar-item-icon"><i class="fa-solid fa-basket-shopping"></i></span>
+                        <span class="sidebar-item-text">Mes Commandes</span>
+                    </a>
+                </li>
+                <li class="sidebar-item sidebar-item-client">
+                    <a href="#" class="sidebar-item-link">
+                        <span class="sidebar-item-icon"><i class="fa-solid fa-book"></i></span>
+                        <span class="sidebar-item-text">Mes Documents</span>
+                    </a>
+                </li>
+                <li class="sidebar-item sidebar-item-client">
+                    <a href="#" class="sidebar-item-link">
+                        <span class="sidebar-item-icon"><i class="fas fa-map"></i></span>
+                        <span class="sidebar-item-text">Carte des Salons</span>
+                    </a>
+                </li>
+            {% endif %}
+
+            {# Pour les administrateurs #}
+            {% if isAdmin %}
+                <li class="sidebar-item sidebar-item-admin">
+                    <a href="#" class="sidebar-item-link">
+                        <span class="sidebar-item-icon"><i class="fa-solid fa-user-tie"></i></span>
+                        <span class="sidebar-item-text">Administration</span>
+                    </a>
+                </li>
+            {% endif %}
+
+            {# Pour les utilisateurs #}
+            <li class="sidebar-item">
+                <a href="#" class="sidebar-item-link">
+                    <span class="sidebar-item-icon"><i class="fa-solid fa-gear"></i></span>
+                    <span class="sidebar-item-text">Mes Paramètres</span>
+                </a>
+            </li>
+            <li class="sidebar-item">
+                <a href="../logout" class="sidebar-item-link">
+                    <span class="sidebar-item-icon"><i class="fa-solid fa-right-from-bracket"></i></span>
+                    <span class="sidebar-item-text">Déconnexion</span>
+                </a>
+            </li>
+            <!-- Autres items -->
+        </ul>
     </div>
 
-    <ul class="sidebar-menu">
-        <li class="sidebar-item">
-            <a href="#" class="sidebar-item-link active">
-                <span class="sidebar-item-icon"><i class="fas fa-home"></i></span>
-                <span class="sidebar-item-text">Accueil</span>
-            </a>
-        </li>
+    <script>
+        document.getElementById('sidebarToggle').addEventListener('click', function () {
+            const sidebar = document.getElementById('sidebar');
+            sidebar.classList.toggle('sidebar-collapsed');
 
-        {# Pour les client #}
-        {% if isClient %}
-            <li class="sidebar-item sidebar-item-client">
-                <a href="#" class="sidebar-item-link">
-                    <span class="sidebar-item-icon"><i class="fa-solid fa-basket-shopping"></i></span>
-                    <span class="sidebar-item-text">Mes Commandes</span>
-                </a>
-            </li>
-            <li class="sidebar-item sidebar-item-client">
-                <a href="#" class="sidebar-item-link">
-                    <span class="sidebar-item-icon"><i class="fa-solid fa-book"></i></span>
-                    <span class="sidebar-item-text">Mes Documents</span>
-                </a>
-            </li>
-            <li class="sidebar-item sidebar-item-client">
-                <a href="#" class="sidebar-item-link">
-                    <span class="sidebar-item-icon"><i class="fas fa-map"></i></span>
-                    <span class="sidebar-item-text">Carte des Salons</span>
-                </a>
-            </li>
-        {% endif %}
+            // Mise à jour du contenu et du footer
+            const mainContent = document.querySelector('.dashboard-content');
+            const footer = document.querySelector('.dashboard-footer');
 
-        {# Pour les administrateurs #}
-        {% if isAdmin %}
-            <li class="sidebar-item sidebar-item-admin">
-                <a href="#" class="sidebar-item-link">
-                    <span class="sidebar-item-icon"><i class="fa-solid fa-user-tie"></i></span>
-                    <span class="sidebar-item-text">Administration</span>
-                </a>
-            </li>
-        {% endif %}
-
-        {# Pour les utilisateurs #}
-        <li class="sidebar-item">
-            <a href="#" class="sidebar-item-link">
-                <span class="sidebar-item-icon"><i class="fa-solid fa-gear"></i></span>
-                <span class="sidebar-item-text">Mes Paramètres</span>
-            </a>
-        </li>
-        <!-- Autres items -->
-    </ul>
-</div>
-
-<script>
-    document.getElementById('sidebarToggle').addEventListener('click', function () {
-        const sidebar = document.getElementById('sidebar');
-        sidebar.classList.toggle('sidebar-collapsed');
-
-        // Forcer la mise à jour en JS
-        const mainContent = document.querySelector('.main-content');
-        if (sidebar.classList.contains('sidebar-collapsed')) {
-            mainContent.style.marginLeft = "90px";
-        } else {
-            mainContent.style.marginLeft = "270px";
-        }
-    });
-</script>
+            if (sidebar.classList.contains('sidebar-collapsed')) {
+                mainContent.style.marginLeft = "70px";
+                footer.style.width = "calc(100% - 70px)";
+                footer.style.marginLeft = "70px";
+            } else {
+                mainContent.style.marginLeft = "250px";
+                footer.style.width = "calc(100% - 250px)";
+                footer.style.marginLeft = "250px";
+            }
+        });
+    </script>
+</header>
