--- a/src/App/View/dashboard/layout/dashboard-base.html.twig
+++ b/src/App/View/dashboard/layout/dashboard-base.html.twig
@@ -6,14 +6,18 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="/assets/css/main.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
+          integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
+          crossorigin="anonymous" referrerpolicy="no-referrer"/>
     <title>{% block title %}MobileBike{% endblock %}</title>
 </head>
 <body>
 
 {% include 'dashboard/layout/components/sidebar.html.twig' %}
-<div class="dashboard-content">
-    {% block content %}{% endblock %}
+<div class="dashboard-content-wrapper">
+    <div class="dashboard-content">
+        {% block content %}{% endblock %}
+    </div>
 </div>
 {% include 'dashboard/layout/components/footer.html.twig' %}
 </body>
