--- a/src/App/View/scss/main.scss
+++ b/src/App/View/scss/main.scss
@@ -4,6 +4,7 @@
 @use "components/layout/footer";
 @use "dashboard/components/dashboard-footer";
 @use "components/banner";
+@use "components/dropdown";
 @use "dashboard/dashboard";
 @use "pages/nos-velos/catalogue";
 @use "pages/nos-velos/card";
