--- a/src/App/View/dashboard/layout/components/sidebar.html.twig
+++ b/src/App/View/dashboard/layout/components/sidebar.html.twig
@@ -10,8 +10,8 @@
         </div>
 
         <ul class="sidebar-menu">
-            <li class="sidebar-item">
-                <a href="#" class="sidebar-item-link active">
+            <li class="sidebar-item sidebar-item-client">
+                <a href="/dashboard/home" class="sidebar-item-link">
                     <span class="sidebar-item-icon"><i class="fas fa-home"></i></span>
                     <span class="sidebar-item-text">Accueil</span>
                 </a>
@@ -42,7 +42,7 @@
             {# Pour les administrateurs #}
             {% if isAdmin %}
                 <li class="sidebar-item sidebar-item-admin">
-                    <a href="#" class="sidebar-item-link">
+                    <a href="/dashboard/administration" class="sidebar-item-link">
                         <span class="sidebar-item-icon"><i class="fa-solid fa-user-tie"></i></span>
                         <span class="sidebar-item-text">Administration</span>
                     </a>
@@ -51,39 +51,28 @@
 
             {# Pour les utilisateurs #}
             <li class="sidebar-item">
-                <a href="#" class="sidebar-item-link">
+                <a href="/dashboard/profile/edit" class="sidebar-item-link">
                     <span class="sidebar-item-icon"><i class="fa-solid fa-gear"></i></span>
                     <span class="sidebar-item-text">Mes Paramètres</span>
                 </a>
             </li>
             <li class="sidebar-item">
-                <a href="../logout" class="sidebar-item-link">
+                <a href="/" class="sidebar-item-link">
                     <span class="sidebar-item-icon"><i class="fa-solid fa-right-from-bracket"></i></span>
+                    <span class="sidebar-item-text">Sortir du Dashboard</span>
+                </a>
+            </li>
+
+            <li class="sidebar-item">
+                <a href="/logout" class="sidebar-item-link">
+                    <span class="sidebar-item-icon"><i class="fa-solid fa-circle-xmark"></i></span>
                     <span class="sidebar-item-text">Déconnexion</span>
                 </a>
             </li>
+
             <!-- Autres items -->
         </ul>
     </div>
 
-    <script>
-        document.getElementById('sidebarToggle').addEventListener('click', function () {
-            const sidebar = document.getElementById('sidebar');
-            sidebar.classList.toggle('sidebar-collapsed');
-
-            // Mise à jour du contenu et du footer
-            const mainContent = document.querySelector('.dashboard-content');
-            const footer = document.querySelector('.dashboard-footer');
-
-            if (sidebar.classList.contains('sidebar-collapsed')) {
-                mainContent.style.marginLeft = "70px";
-                footer.style.width = "calc(100% - 70px)";
-                footer.style.marginLeft = "70px";
-            } else {
-                mainContent.style.marginLeft = "250px";
-                footer.style.width = "calc(100% - 250px)";
-                footer.style.marginLeft = "250px";
-            }
-        });
-    </script>
+    <script type="text/javascript" src="/assets/js/dashboard/sidebar.js"></script>
 </header>
