--- a/src/App/View/pages/error.html.twig
+++ b/src/App/View/pages/error.html.twig
@@ -1,9 +1,21 @@
-{% extends 'pages/layout/static-base.html.twig' %}
+<!doctype html>
+<html lang="fr">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport"
+          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="/assets/css/main.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
+          integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
+          crossorigin="anonymous" referrerpolicy="no-referrer"/>
+    <title>MobileBike</title>
+</head>
+<body>
 
-{% block title %}Non trouvée{% endblock %}
+<main class="error-page">
+    <h1>Erreur {% if debug %} {{ status_code }} {% endif %} : {{ message }}</h1>
+</main>
 
-{% block content %}
-    <main class="error-page">
-        <h1>Erreur {% if debug %} {{ status_code }} {% endif %} : {{ message }}</h1>
-    </main>
-{% endblock %}
+</body>
+</html>
