--- a/src/App/View/scss/components/_forms.scss
+++ b/src/App/View/scss/components/_forms.scss
@@ -42,6 +42,14 @@
     }
   }
 
+  // Zone de texte (textarea)
+  &-textarea {
+    @extend .form-control;
+    min-height: 8rem;
+    resize: vertical;
+  }
+
+
   &-select {
     appearance: none;
     background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='12' height='12' viewBox='0 0 24 24' fill='none' stroke='%23999999' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'%3E%3Cpolyline points='6 9 12 15 18 9'%3E%3C/polyline%3E%3C/svg%3E");
