--- a/src/App/View/dashboard/products/editMobileBike.html.twig
+++ b/src/App/View/dashboard/products/editMobileBike.html.twig
@@ -6,7 +6,7 @@
 
     <h1>Modifier un Produit</h1>
 
-    <form class="form" action="/dashboard/products/edit/{{ product.id_product }}" method="POST" enctype="multipart/form-data">
+    <form class="form" action="/dashboard/products/edit/{{ product.id }}" method="POST" enctype="multipart/form-data">
 
         <div class="form-group">
             <label for="name" class="form-label">Modèle</label>
