--- a/src/App/View/scss/dashboard/dashboard.scss
+++ b/src/App/View/scss/dashboard/dashboard.scss
@@ -1,6 +1,7 @@
 @use '../theme';
 @use 'dashboard-products';
 @use 'dashboard-product-add';
+@use 'dashboard-cart';
 
 .dashboard-content {
   margin-left: 90px;
